12/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: tony-stark.k8slearning.io
    http:
      paths:
      - path: /
        backend:
          serviceName: empms-frontend
          servicePort: 5000
