12/gateway-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
spec:
  rules:
  - host: tony-stark.k8slearning.io
    http:
      paths:
      - path: /attendance
        backend:
          serviceName: empms-gateway
          servicePort: 8080
